trunk/Archive2/88/704dbe471fec08/output
main.cpp: In function 'int main()':
main.cpp:8:5: error: static assertion failed: empty<0> doesn't have zero size
     static_assert(sizeof(empty<0>) == 0, "empty<0> doesn't have zero size");
     ^
